--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "llamaai": "^1.0.4",
     "node-fetch-commonjs": "^3.3.2"
   }
 }
